<resources>
    <string name="app_name">CHIPTool</string>
    <string name="barcode_scanner_activity_toolbar_title">QR Scan</string>
    <string name="text_ok">Ok</string>
    <string name="location_permission_denied_title">Location permission required</string>
    <string name="location_permission_denied_message">Since location permission was denied, some functions of the app may be unavailable. </string>
    <string name="chip_device_info_title">CHIP Device Info:</string>
    <string name="chip_device_info_version_label">Version:</string>
    <string name="chip_device_info_vendor_id_label">Vendor ID:</string>
    <string name="chip_device_info_product_id_label">Product ID:</string>
    <string name="chip_device_info_discriminator_label">Discriminator:</string>
    <string name="chip_device_info_setup_code_label">Setup PIN Code:</string>
    <string name="chip_device_info_optional_vendor_tags_label">Optional Vendor tags:</string>
    <string name="chip_device_info_discovery_capabilities_text">Discovery capabilities: %1s</string>
    <string name="camera_permission_missing_alert_title">Camera permission missing</string>
    <string name="camera_permission_missing_alert_subtitle">Camera permission required to be able to scan the QR code.</string>
    <string name="camera_permission_missing_alert_try_again">Try again</string>
    <string name="camera_unavailable_alert_title">Camera unavailable</string>
    <string name="camera_unavailable_alert_subtitle">Error launching camera to scan the QR code.</string>
    <string name="camera_unavailable_alert_exit">Exit</string>
    <string name="input_address_btn_text">Input device address</string>

    <string name="scan_qr_code_btn_text">Scan QR Code</string>
    <string name="provision_wifi_credentials_btn_text">Provision CHIP device with Wi-Fi</string>
    <string name="provision_thread_credentials_btn_text">Provision CHIP device with Thread</string>
    <string name="on_off_level_btn_text">Light On/Off &amp; Level Cluster</string>
    <string name="enter_ip_address_hint_text">Enter IP Address (eg. 192.168.10.2)</string>
    <string name="enter_fabric_id_hint_text">Enter Fabric ID</string>
    <string name="enter_device_id_hint_text">Enter Device ID</string>
    <string name="enter_endpoint_id_hint_text">Enter Endpoint ID</string>
    <string name="update_device_address_btn_text">Update address</string>
    <string name="update_device_address_failure">Device address update failed: %1$s</string>

    <string name="address_commissioning_title_text">Commission with IP address</string>
    <string name="default_discriminator">3840</string>
    <string name="default_pincode">20202021</string>
    <string name="enter_device_address_label_text">Device address</string>
    <string name="enter_discriminator_label_text">Discriminator</string>
    <string name="enter_pincode_label_text">Pincode</string>
    <string name="commission_btn_text">Commission</string>
    <string name="dns_discover_btn_text">Discover</string>
    <string name="wifi_scan_btn_text">Wi-Fi Scan</string>

    <string name="send_command_on_btn_text">On</string>
    <string name="send_command_off_btn_text">Off</string>
    <string name="send_command_toggle_btn_text">Toggle</string>
    <string name="read_on_off_attribute_btn_text">Read</string>
    <string name="show_subscribe_dialog_btn_text">Subscribe</string>
    <string name="send_command_type_label_text">%s/%d command sent!</string>
    <string name="rendezvous_over_ble_btn_text">Rendezvous over BLE</string>
    <string name="rendezvous_over_soft_ap_btn_text">Rendezvous over Soft AP</string>

    <string name="rendezvous_over_ble_scanning_text">Scanning for BLE device %1$s</string>
    <string name="rendezvous_over_ble_scanning_failed_text">Device not found</string>
    <string name="rendezvous_over_ble_connecting_text">Connecting to %1$s</string>
    <string name="rendezvous_over_ble_pairing_text">Pairing</string>
    <string name="rendezvous_over_ble_pairing_failure_text">Pairing failed</string>
    <string name="rendezvous_over_ble_commissioning_success_text">Network commissioning completed</string>
    <string name="rendezvous_over_ble_commissioning_failure_text">Network commissioning failed</string>
    <string name="commissioning_completed">Commissioning completed with result: %1$d</string>

    <string name="attestation_test_btn_text">Attestation Test</string>
    <string name="attestation_fetching_status">Fetching…</string>
    <string name="attestation_app_not_found">No attestation app found</string>

    <string name="enter_wifi_credentials_title">Enter your Wi-Fi network and password below that you want to put your CHIP device on.</string>
    <string name="enter_wifi_ssid_hint">Enter Wi-Fi SSID</string>
    <string name="enter_wifi_password_hint">Enter Wi-Fi password</string>
    <string name="enter_wifi_save_network_btn">Save network</string>

    <string name="enter_thread_credentials_title">Enter credentials of the Thread network that you want to put your CHIP device on.</string>
    <string name="enter_thread_channel_hint">Channel:</string>
    <string name="enter_thread_panid_hint">PAN ID:</string>
    <string name="enter_thread_xpanid_hint">Extended PAN ID:</string>
    <string name="enter_thread_master_key_hint">Master Key:</string>
    <string name="enter_thread_channel_text">15</string>
    <string name="enter_thread_panid_text">1234</string>
    <string name="enter_thread_xpanid_text">11:11:11:11:22:22:22:22</string>
    <string name="enter_thread_master_key_text">00:11:22:33:44:55:66:77:88:99:AA:BB:CC:DD:EE:FF</string>
    <string name="enter_thread_save_network_btn">Save network</string>

    <string name="nfc_tag_action_title">CHIP NFC Tag read. Choose an action:</string>
    <string name="nfc_tag_action_show">Show device information</string>
    <string name="nfc_tag_action_wifi">Provision into Wi-Fi network</string>
    <string name="nfc_tag_action_thread">Provision into Thread network</string>

    <string name="sensor_client_btn_text">Sensor clusters</string>
    <string name="sensor_client_read_btn_text">Read</string>
    <string name="sensor_client_watch_btn_text">Watch</string>
    <string name="sensor_client_last_value_text">Last value: %1$.2f %2$s</string>
    <string name="sensor_client_read_error_text">Failed to read the sensor: %1$s</string>
    <string name="sensor_client_subscribe_error_text">Failed to subscribe to the sensor: %1$s</string>
    <string name="sensor_client_unsubscribe_error_text">Failed to unsubscribe from the sensor: %1$s</string>
    <string name="cluster_interaction_tool">Cluster Interaction Tool</string>

    <string name="wildcard_btn_text">Wildcard</string>

    <string name="multi_admin_client_btn_text">Multi-admin cluster</string>
    <string name="enter_commissioning_timeout_hint_text">Enter Commissioning timeout</string>
    <string name="basic_commissioning_method_btn_text">Basic Commissioning Method</string>
    <string name="enter_discriminator_hint_text">Enter Discriminator</string>
    <string name="enter_setup_pin_code_hint_text">Enter Setup PIN Code</string>
    <string name="enhanced_commissioning_method_btn_text">Enhanced Commissioning Method</string>
    <string name="revoke_btn_text">Revoke</string>

    <string name="op_cred_client_btn_text">Operational Credentials cluster</string>
    <string name="op_cred_client_read_supported_fabric_btn_text">Read Supported Fabric count</string>
    <string name="op_cred_client_read_commissioned_fabric_btn_text">Read Commissioned Fabric count</string>

    <string name="basic_cluster_btn_text">Basic cluster</string>
    <string name="basic_cluster_write_btn_text">Write</string>
    <string name="basic_cluster_write_user_label_hint_text">Enter User Label</string>
    <string name="basic_cluster_write_location_hint_text">Enter Location</string>
    <string name="basic_cluster_local_config_disabled_btn_text">Set LocalConfigDisabled</string>
    <string name="basic_cluster_read_attribute_btn_text">Read Attribute</string>
    <string name="basic_cluster_data_model_revision_text">DataModelRevision</string>
    <string name="basic_cluster_vendor_name_text">VendorName</string>
    <string name="basic_cluster_vendor_id_text">VendorID</string>
    <string name="basic_cluster_product_name_text">ProductName</string>
    <string name="basic_cluster_product_id_text">ProductID</string>
    <string name="basic_cluster_node_label_text">NodeLabel</string>
    <string name="basic_cluster_location_text">Location</string>
    <string name="basic_cluster_hardware_version_text">HardwareVersion</string>
    <string name="basic_cluster_hardware_version_string_text">HardwareVersionString</string>
    <string name="basic_cluster_software_version_text">SoftwareVersion</string>
    <string name="basic_cluster_software_version_string_text">SoftwareVersionString</string>
    <string name="basic_cluster_manufacturing_date_text">ManufacturingDate</string>
    <string name="basic_cluster_part_number_text">PartNumber</string>
    <string name="basic_cluster_product_url_text">ProductURL</string>
    <string name="basic_cluster_product_label_text">ProductLabel</string>
    <string name="basic_cluster_serial_number_text">SerialNumber</string>
    <string name="basic_cluster_local_config_disabled_text">LocalConfigDisabled</string>
    <string name="basic_cluster_reachable_text">Reachable</string>
    <string name="basic_cluster_cluster_revision_text">ClusterRevision</string>

    <string name="subscribe_dialog_title_text">Subscribe</string>
    <string name="subscribe_dialog_subscribe_btn_text">Subscribe</string>
    <string name="subscribe_dialog_min_interval_hint">Minimum interval (seconds)</string>
    <string name="subscribe_dialog_max_interval_hint">Maximum interval (seconds)</string>

    <string name="endpoint_id_label">Endpoint ID</string>
    <string name="cluster_id_label">Cluster ID</string>
    <string name="attribute_id_label">Attribute ID</string>
    <string name="event_id_label">Event ID</string>
    <string name="wildcard_help_label">Leave blank for wildcard</string>
    <string name="wildcard_subscribe_btn_text">Subscribe</string>
    <string name="wildcard_read_btn_text">Read</string>
    <string name="wildcard_subscribe_event_btn_text">Subscribe Event</string>
    <string name="wildcard_read_event_btn_text">Read Event</string>

    <string name="provision_custom_flow_btn_text">Provision CHIP device with Custom Flow</string>
    <string name="chip_device_info_commissioning_flow_label">Commissioning Flow:</string>
    <string name="chip_device_info_custom_flow_btn_text">Read from Ledger</string>
    <string name="chip_ledger_info_title">Device Model Info</string>
    <string name="chip_ledger_info_commissioning_flow_url_label">Commissioning Url:</string>
    <string name="chip_ledger_info_commissioning_flow_url_text">Loading...</string>
    <string name="chip_ledge_info_redirect_btn_text">Redirect</string>
    <string name="chip_ledger_info_commissioning_flow_url_not_available">Not available</string>
    <string name="provision_custom_flow_alert_title">Commissioning flow Completed.</string>

    <string name="dcl_api_root_url">https://dcl.dev.dsr-corporation.com/api/modelinfo/models</string>
    <string name="dcl_response_key">result</string>
    <string name="dcl_custom_flow_url_key">custom</string>
    <string name="custom_flow_return_url">mt://modelinfo</string>
    <string name="retrieve_endpoint_list">Retrieve Endpoint List</string>
    <string name="invoke">Invoke</string>
    <string name="select_a_command">Select a command</string>
    <string name="select_a_cluster">Select a cluster</string>
    <string name="endpoint_name">Endpoint: </string>
    <string name="wifi_connect_btn_text">Connect</string>
</resources>
