<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/opCredClusterFabricIdEd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/enter_fabric_id_hint_text"
        android:inputType="text"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/opCredClusterDeviceIdEd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@id/opCredClusterFabricIdEd"
        android:hint="@string/enter_device_id_hint_text"
        android:inputType="text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/opCredClusterUpdateAddressBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/opCredClusterFabricIdEd"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/update_device_address_btn_text" />

    <Button
        android:id="@+id/readSupportedFabricBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/opCredClusterUpdateAddressBtn"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/op_cred_client_read_supported_fabric_btn_text" />

    <Button
        android:id="@+id/readCommissionedFabricBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/readSupportedFabricBtn"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/op_cred_client_read_commissioned_fabric_btn_text" />

    <TextView
        android:id="@+id/opCredClusterCommandStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/readCommissionedFabricBtn"
        android:minLines="4"
        android:padding="16dp"
        android:singleLine="false"
        android:textSize="20sp" />

</RelativeLayout>
