<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/title_tv"
        android:text="@string/chip_device_info_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_alignParentTop="true"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/subtitle_tv"
        android:text="@string/chip_device_info_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/title_tv"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/version_label_tv"
        android:text="@string/chip_device_info_version_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/subtitle_tv"
        android:layout_alignParentStart="true"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/version_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/subtitle_tv"
        android:layout_toEndOf="@id/version_label_tv"
        android:layout_alignParentEnd="true"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/vendor_label_tv"
        android:text="@string/chip_device_info_vendor_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/version_label_tv"
        android:layout_alignParentStart="true"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/vendor_id_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/version_label_tv"
        android:layout_toEndOf="@id/vendor_label_tv"
        android:layout_alignParentEnd="true"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/product_id_label_tv"
        android:text="@string/chip_device_info_product_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/vendor_label_tv"
        android:layout_alignParentStart="true"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/product_id_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/vendor_label_tv"
        android:layout_toEndOf="@id/product_id_label_tv"
        android:layout_alignParentEnd="true"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/setup_code_label_tv"
        android:text="@string/chip_device_info_setup_code_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/product_id_label_tv"
        android:layout_alignParentStart="true"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/setup_code_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/product_id_label_tv"
        android:layout_toEndOf="@id/setup_code_label_tv"
        android:layout_alignParentEnd="true"
        android:textSize="20sp"/>
</RelativeLayout>
